style: updated head/header name

--- a/base_templates/global/partial/_head.html
+++ b/base_templates/global/partial/_head.html
@@ -1,7 +1,7 @@
 {% load static %}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{{site_title}}Agenda </title>
+<title>{{site_title}}Phonebook</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{% static 'global/css/style.css'%}">
