--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -20,9 +20,24 @@
                 <div class="form-group">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{field}}
+                    {{field.errors}}
+
+                    {% if field.help_text %}
+                        <p class="help-text"/> {{field.help_text}}
+                    {% endif %}
                 </div>
             {% endfor %}
         </div>
+
+        {% if form.non_field_errors  %}
+            <div class="form-content">
+                <div class="form-group">
+                    <div class="message error">
+                        {{form.non_field_errors}}
+                    </div>
+                </div>
+            </div>
+        {% endif %}
 
         <div class="form-content">
         <div class="form-group">
