--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -25,7 +25,14 @@
                     {% if field.help_text %}
                         <p class="help-text"/> {{field.help_text}}
                     {% endif %}
+
                 </div>
+                {% if field.name == 'picture' and field.value.url %}
+                    <div class="form-group">
+                        <img src="{{field.value.url}}" alt="">
+                    <div>
+                {%endif%}    
+                
             {% endfor %}
         </div>
 
