--- a/base_templates/global/partial/_header.html
+++ b/base_templates/global/partial/_header.html
@@ -12,12 +12,12 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="{% url 'contact:login' %}" class="menu-link">
                     Login
                 </a>
             </li>
             <li>
-                <a href="#" class="menu-link">
+                <a href="{% url 'contact:register' %}" class="menu-link">
                     Register
                 </a>
             </li>
