fix: added better visual cue when Creating|Updating|Deleting user

--- a/contact/templates/contact/update.html
+++ b/contact/templates/contact/update.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <div class="form-wrapper">
-    <h1>Create Contact</h1>
+    <h1>Update Contact</h1>
 
-    <form 
+    <form
         action="{{form_action}}"
         method="POST"
         enctype="multipart/form-data"
